fix style: increase gap before ip

--- a/style.css
+++ b/style.css
@@ -199,6 +199,10 @@ button#startStopBtn {
   margin-bottom: 2em;
 }
 
+.testGroupParent {
+  margin-bottom: 1em;
+}
+
 p {
   margin-block-start: 0;
 }
